syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "Kry0z1.pubsub.v1;pubsubv1";

service PubSub {
  // Подписка (сервер отправляет поток событий)
  rpc Subscribe(SubscribeRequest) returns (stream Event);

  // Публикация (классический запрос-ответ)
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
  string key = 1;
}

message PublishRequest {
  string key = 1;
  string data = 2;
}

message Event {
  string data = 1;
}